--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "next-portfolio",
   "version": "0.1.0",
   "private": true,
+  "type":"module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
