--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "next-portfolio",
   "version": "0.1.0",
   "private": true,
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
@@ -13,10 +13,13 @@
     "@conform-to/react": "^1.1.5",
     "@conform-to/zod": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.3",
